Aula 1 -  Iniciando no HTMl

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 
 <body>
-    <h1>Projeto HTML - Aaula Mariany</h1> <!-- Apenas um por tela -->
+    <h1>Projeto HTML - Aula Mariany</h1> <!-- Apenas um por tela -->
     <p>Oi! Eu sou um parágrafo</p> <!-- Utilizar o <p> para textos que não são títulos -->
     <a href="https://www.google.com/" target="_blank" title="Google">Abra o Google</a> <!-- Tag para links (internos e externos) -->
     <img src="./images/favicon.png" alt="Galinha em pixles do stardew Valley"/> <!-- O ponto serve para utilizar as imagens diretamente do computador -->
-    <div>Saudades de jogar Stardew Valley</div> <!-- Um tipo de divisor do código (bloco) -->
+    <div>
+        <p>Saudades de jogar Stardew Valley!</p>
+    </div> <!-- Um tipo de divisor do código (bloco) -->
 </body>
 </html>
