Aula 2 - TAGs de semântica

--- a/Aula 02/index_teste.html
+++ b/Aula 02/index_teste.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <h1>Minha loja</h1>
-        <hr>
+        <hr/>
     </header>
     
     <nav>
@@ -19,14 +19,14 @@
     
     <main>
         <article>
-            <hr>
+            <hr/>
             <p>Bem-vindo(a)!</p>
-            <hr>
+            <hr/>
 
         </article>
         <h2>Nossos produtos</h2>
         <h3>Prata</h3>
-        <h3>Ouro</h3><br>
+        <h3>Ouro</h3><br/>
         <table>
             <tr>
                 <th>Anel</th>
@@ -41,13 +41,13 @@
                 <td>R$ 120,00</td>
             </tr>
         </table>
-        <hr>
+        <hr/>
         <h2>Categorias</h2>
         <h3>Brincos</h3>
         <h3>Colares</h3>
         <h3>Pulseiras</h3>
         <h3>Piercings</h3>
-        <hr>
+        <hr/>
         <aside>
             <li>Todos os produtos</li>
             <li>Prata</li>
@@ -58,7 +58,7 @@
     <footer>
         <dl>
             <dt>Formas de pagamento</dt>
-            <dd>Débito/crédito <br>PIX <br>Boleto</dd>
+            <dd>Débito/crédito <br/>PIX <br/>Boleto</dd>
         <address>
             <p>Criado por <a href="#">Julya Jacometti</a></p><br/>
         </address>
